syntax = "proto3";

import "google/protobuf/any.proto";

package net.bafeimao.umbrella.servers.generated;

// option java_package = "net.bafeimao.umbrella.servers.generated";

option java_outer_classname = "TestProto";

option optimize_for = SPEED;

message Test1 {
	int32 a = 1;
	string b = 2;
	bytes c = 3;
	Test2 d = 4;
	repeated int32 e = 5 [packed = false];
	int32 f = 6;

	message Test2 {
		int32 a = 1;
	}
}

message MyMap {
	map<string, int32> projects = 3;
}
