syntax = "proto3";

//import "any.proto";

package net.bafeimao.umbrella.support.generated;

// option java_package = "net.bafeimao.umbrella.support.generated";

option java_outer_classname = "CommonProto";

option optimize_for = SPEED;

message Packet {
	MessageType type = 1;
	uint64 sequence = 2;
	bytes content = 3;
}

enum MessageType {
	KEEP_ALIVE = 0x00000000;
	NOTIFICATION =0x00000001;
 }

message KeepAlive {
}

message Notification {
	string text = 1;
}